version with problem drag upload delete link
